CHANGELOG
=========

DarkElements version 6.4 - january 2020
- Removed support for IE 8 and older
- Added basic support for new editor
- Updated head section
- Changed logo tagline from h2 into div
- Added class "list-image" to featured image in blog list
- This class replaces native class "wp-post-image"
- Removed native class "wp-post-image" from stylesheet
- Removed unnecessary whitespaces from most files
- Minor changes in code

DarkElements version 6.3 - july 2018
- File style: changed CSS of many floating elements
- File style: removed unnecessary CSS
- File style: mobile menu update
- File comments: changed comments-title from h4 into h3

DarkElements version 6.2 - june 2018
- Fixed mistake in POT file
- Readme file: removed donate link

DarkElements version 6.1 - june 2018
- File comments: minor fix
- Updated file style
- Updated theme author info

DarkElements version 6.0 - february 2018
- Several small adjustments
- Updated files style and custom-editor-style

DarkElements version 5.9 - february 2018
- Several small adjustments
- Updated file style and functions

DarkElements version 5.8 - february 2018
- Please ignore my notification in previous version regarding removal from repository
- Decided not to remove it yet
- Added a static font-size in body tag
- Now other font-sizes will scale better
- Updated h1-h6 headings
- Updated files style and custom-editor-style
- Several small adjustments

DarkElements version 5.7 - november 2017
- Last update: this theme will be removed from repository
- You can keep using theme, but without updates and without support from author
- Added new options in customizer for blog page and posts
- File style: relocated border-bottom from  .more to CSS class .post-list

DarkElements version 5.6 - september 2017
- Fixed display issue with mobile menu
- Added div container around mobile menu
- Updated files header and style

DarkElements version 5.5 - july 2017