@@ -1,15 +1,16 @@
 === DarkElements ===
 Contributors: Guido07111975
-Version: 6.4
+Version: 6.5
+Requires PHP: 5.6
 Requires at least: 5.2
-Tested up to: 5.3
+Tested up to: 5.4
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 
 
 == Description ==
-DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
+DarkElements is a lightweight and mobile-friendly WordPress theme. Personalize your website via the Customizer in your dashboard. It also contains multiple widget areas. Enjoy!
 
 
 == Installation ==
@@ -18,31 +19,21 @@ DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPre
 3. Once activated, you're ready to use it.
 
 = Set hompepage =
-You can use the default homepage (displaying posts) or set a static page as homepage.
+You can choose between the default homepage (displaying posts) and a static page as homepage.
 
-To set a static homepage go to your WordPress Dashboard > Settings > Reading and select the page you want.
+To set a static page as homepage go to your WordPress Dashboard > Settings > Reading and select the page you want.
 
-= Header image =
-You can change the header image via WordPress Dashboard > Appearance > Customize. 
+= Customizer =
+You can personalize your theme via the Customizer in your dashboard.
 
-You will find the recommended size there too.
+Besides the native settings for Site Identity and Menu you can also:
 
-= Logo =
-Set a logo to replace site title and tagline via WordPress Dashboard > Appearance > Customize.
-
-= Background =
-You can add your own background(image) via WordPress Dashboard > Appearance > Customize.
-
-= Menu = 
-You can create and set a menu via WordPress Dashboard > Appearance > Menus.
-
-= Menu title =
-You can change the menu title via WordPress Dashboard > Appearance > Customize.
-
-= Blog =
-You can set a page title and content above your posts via WordPress Dashboard > Appearance > Customize.
-
-And you can change the way how posts are displayed via WordPress Dashboard > Appearance > Customize.
+* Set header image (you will find the recommended image-size there as well)
+* Set logo to replace site title and tagline
+* Set background-color or background-image
+* Set page title and content above your posts
+* Change the way how posts are being displayed
+* Change title that is being displayed above your menu
 
 
 == Copyright ==
@@ -74,7 +65,7 @@ And you can change the way how posts are displayed via WordPress Dashboard > App
 This theme is translation-ready and supports language packs from wordpress.org
 
 = Credits =
-DarkElements is inspired by a theme called Wallbase (released under the GNU General Public License, version 2): http://www.fabthemes.com/wallbase
+DarkElements is inspired by a theme called Wallbase (released under the GNU General Public License, version 2): https://www.fabthemes.com/wallbase
 
 Without the WordPress codex and help from the WordPress community I was not able to develop my theme, so: thank you!
 
