@@ -1,10 +1,13 @@
 /*
 Theme Name: DarkElements
 Theme URI: https://www.guido.site/themes
-Version: 6.4
+Version: 6.5
+Requires PHP: 5.6
+Requires at least: 5.2
+Tested up to: 5.4
 Author: Guido
 Author URI: https://www.guido.site
-Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
+Description: DarkElements is a lightweight and mobile-friendly WordPress theme. Personalize your website via the Customizer in your dashboard. It also contains multiple widget areas. Enjoy!
 Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -171,8 +174,11 @@ button {font-size:inherit; font-family:inherit;}
 .nav-primary-title {margin:0 0 10px; padding:0 0 5px; border-bottom:1px solid #444;}
 
 
-/* WIDGETS */
+/* SIDEBAR WIDGET AREA */
 #sidebar-widgets {clear:both;}
+
+
+/* WIDGETS */
 .widget {margin:0 0 20px;}
 .widgettitle {margin:0 0 10px; padding:0 0 5px; border-bottom:1px solid #444;}
 
@@ -266,6 +272,7 @@ img.aligncenter {clear:both; display:block; margin:0.4em auto 0.4em auto;}
 .comment-list .children > li {margin:0 0 0 10px;}
 .comment-body {background:none; border:1px solid #444; margin:0 0 20px; padding:10px;}
 .comment-content {padding:10px 0;}
+.comment-metadata .edit-link {display:block;}
 .comment-notes, .form-allowed-tags {padding:5px 0; font-size:0.8em;}
 .comments-title, .comment-reply-title, .no-comments {margin:0 0 10px; font-size:1.45em;}
 .comment-author .avatar {margin:0 10px 0 0; border-radius:5px;}
