@@ -1,6 +1,12 @@
 CHANGELOG
 =========
 
+DarkElements version 6.5 - may 2020
+- Added extra class to bottom postmeta of single event page
+- Added setting to show or hide menu title
+- Minor changes in code
+- Readme file: updated info about theme features and settings
+
 DarkElements version 6.4 - january 2020
 - Removed support for IE 8 and older
 - Added basic support for new editor
